<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    tools:context=".Connection" >
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        <TextView
	        android:id="@+id/streamSettingsText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:layout_alignParentTop="true"
	        android:paddingTop="0dp"
	        android:paddingBottom="10dp"
	        android:text="@string/title_streaming_settings" />
        
        <RadioGroup
            android:id="@+id/streamConfigGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/streamSettingsText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/config720p30Selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_720p30" />

            <RadioButton
                android:id="@+id/config720p60Selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/radio_720p60" />

            <RadioButton
                android:id="@+id/config1080p30Selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/radio_1080p30" />

            <RadioButton
                android:id="@+id/config1080p60Selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/radio_1080p60" />

        </RadioGroup>

        <Button
            android:id="@+id/advancedSettingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/disableToasts"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/button_advanced_settings" />

        <CheckBox
            android:id="@+id/stretchToFill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/streamConfigGroup"
            android:layout_marginTop="15dp"
            android:text="@string/check_stretchToFill" />
        
        <CheckBox
            android:id="@+id/enableSops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stretchToFill"
            android:layout_marginTop="15dp"
            android:text="@string/check_enableSops" />
        
        <CheckBox
            android:id="@+id/disableToasts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enableSops"
            android:layout_marginTop="15dp"
            android:text="@string/check_disableToasts" />
    </RelativeLayout>
	
</ScrollView>
