<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    tools:context=".Connection" >
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        <TextView
	        android:id="@+id/advancedSettingsText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:layout_alignParentTop="true"
	        android:paddingTop="0dp"
	        android:paddingBottom="10dp"
	        android:text="@string/button_advanced_settings" />

        <RadioGroup
            android:id="@+id/decoderConfigGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/advancedSettingsText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/softwareDec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_forceSoftware" />

            <RadioButton
                android:id="@+id/autoDec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_autoSelect" />

            <RadioButton
                android:id="@+id/hardwareDec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_forceHardware" />
        </RadioGroup>

        <TextView
            android:id="@+id/bitrateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/decoderConfigGroup"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp" />

        <SeekBar
            android:id="@+id/bitrateSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/decoderConfigGroup"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/bitrateLabel" />
    </RelativeLayout>
	
</ScrollView>
